# homelab-manager

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  dev-stop.sh  dev.sh
.claude/: instructions.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: build.yml  (+1 more)
backend/: .env.example  .env.production.example  .env.test.example  alembic.ini  pyproject.toml  worker.py
backend/app/: __init__.py  celery_app.py  cli.py  config.py  database.py  extensions.py  main.py
backend/app/models/: __init__.py  app_setting.py  audit_log.py  automation_job.py  device.py  device_variables.py  hardware_spec.py  metric.py  network_interface.py  provisioning_job.py  service.py  user.py  vault_secret.py  workflow.py
backend/app/routes/: __init__.py  auth.py  automation.py  devices.py  metrics.py  network_interfaces.py  provisioning.py  services.py  workflows.py
backend/app/schemas/: __init__.py  auth.py  automation.py  device.py  metric.py  network_interface.py  provisioning.py  service.py
backend/app/services/: ansible_executor.py  vault.py  workflow_engine.py
backend/app/services/executors/: __init__.py  ansible.py  base.py  registry.py
backend/app/tasks/: __init__.py  automation.py
backend/app/utils/: audit.py  errors.py  pagination.py  validation.py  validators.py
backend/automation/ansible/playbooks/: README.md  basic_setup.yml  docker_install.yml
backend/automation/ansible/playbooks/schemas/: basic_setup.schema.yml  docker_install.schema.yml  ping.schema.yml  system_info.schema.yml  update.schema.yml
backend/migrations/: env.py
backend/migrations/versions/: 20260112_0435_5fea6ecb8e6a_initial_schema_with_devices_hardware_.py  20260112_1944_fd6676591086_add_network_interfaces_table.py  20260113_extensible_automation.py  20260113_rename_provisioning_to_automation.py  20260114_0405_1b63e9d5b564_add_avatar_data_and_avatar_mime_type_to_.py  20260114_1700_113473d262e7_add_theme_preferences_to_users.py  20260114_2100_automation_phase1_variables.py  20260115_automation_phase3_multi_device.py  20260115_automation_phase4_vault_secrets.py  20260115_automation_phase5_workflows.py  20260116_add_app_settings.py  20260116_add_cancelled_to_jobstatus.py
backend/scripts/: README.md  manage_test_data.py
backend/tests/: __init__.py  test_health.py
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
docs/: API.md
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
(+52 files in other folders)
